create dir /run and /var/run

--- a/CC_LAB-6/Jenkinsfile
+++ b/CC_LAB-6/Jenkinsfile
@@ -29,7 +29,8 @@ pipeline {
                   --network app-network \
                   -p 80:80 \
                   nginx
-                
+
+                docker exec nginx-lb mkdir -p /run /var/run
                 docker cp CC_LAB-6/nginx/default.conf nginx-lb:/etc/nginx/conf.d/default.conf
                 docker exec nginx-lb nginx -s reload
                 '''
